--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import 'bootstrap/scss/bootstrap-grid.scss';
-// @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/spinners";
 @import './scss/variables.scss';
 
 body {
