--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,4 @@
-@import 'bootstrap/scss/bootstrap-grid.scss';
-@import "~bootstrap/scss/spinners";
+@import "~bootstrap/scss/bootstrap";
 @import './scss/variables.scss';
 
 body {
