--- a/src/pages/userRepos/styles.scss
+++ b/src/pages/userRepos/styles.scss
@@ -2,6 +2,7 @@
     margin-top: 20px;
 
     select {
-        float: right;
+        justify-content: flex-end;
+        margin-bottom: 5px;
     }
 }
