--- a/src/components/userListRepo/styles.scss
+++ b/src/components/userListRepo/styles.scss
@@ -1,10 +1,21 @@
 .user-list-repo {
   ul {
     list-style-type: none;
+    padding: 0;
 
     li {
+      margin-bottom: 5px;
       h1 {
         font-size: 20px;
+      }
+
+      .description-bio {
+        font-size: 14px;
+        color: #666;
+      }
+
+      p {
+        margin-bottom: 5px;
       }
 
       border-bottom: 1px solid #c0c0c0;
