--- a/src/components/userListRepo/styles.scss
+++ b/src/components/userListRepo/styles.scss
@@ -16,6 +16,14 @@
 
       p {
         margin-bottom: 5px;
+
+        svg {
+          margin-right: 10px;
+        }
+
+        span {
+          margin-right: 25px;
+        }
       }
 
       border-bottom: 1px solid #c0c0c0;
