added icon language

--- a/src/components/userListRepo/styles.scss
+++ b/src/components/userListRepo/styles.scss
@@ -17,7 +17,11 @@
       p {
         margin-bottom: 5px;
 
-        svg {
+        img {
+          max-height: 24px;
+        }
+
+        svg, img {
           margin-right: 10px;
         }
 
